--- a/piedrapapeltijera.html
+++ b/piedrapapeltijera.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta charset="utf-8"/>
-      <title>Piedra, papel o tijera</title>
+      <title>Piedra, Papel o Tijera</title>
       <script>
         function aleatorio(min, max) {
             return Math.floor(Math.random() * (max - min + 1) + min)
